redactable/tests/ui/not_sensitive_display_not_sensitive_rejected.stderr
error: `#[not_sensitive]` attributes are not needed on `NotSensitiveDisplay` types (the entire type is already non-sensitive)
 --> tests/ui/not_sensitive_display_not_sensitive_rejected.rs:7:8
  |
7 |     Io(#[not_sensitive] std::io::Error),
  |        ^

error: cannot find attribute `not_sensitive` in this scope
 --> tests/ui/not_sensitive_display_not_sensitive_rejected.rs:7:10
  |
7 |     Io(#[not_sensitive] std::io::Error),
  |          ^^^^^^^^^^^^^
  |
help: `not_sensitive` is an attribute that can be used by the derive macros `Sensitive` and `SensitiveDisplay`, you might be missing a `derive` attribute
  |
6 + #[derive(Sensitive, SensitiveDisplay)]
7 | enum MyError {
  |
